# swingby

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  build-skia.bat  build-skia.macos.sh  gen-protocols.sh  gen-shaders.py
cmake/cocoa/: CMakeLists.txt
cmake/wayland/: CMakeLists.txt
cmake/win32/: CMakeLists.txt
demos/: Makefile  main.c
demos/sbgears/: Makefile  main.c  window.c  window.h
docs/: Doxyfile  README.md  index.dox
docs/licenses/: LICENSE.eglgears
examples/: CMakeLists.txt
examples/00_application/: CMakeLists.txt  main.c
examples/01_surface/: CMakeLists.txt  main.c
examples/02_desktop-surface/: CMakeLists.txt  main.c
examples/03_views/: CMakeLists.txt  main.c
examples/04_event-listener/: CMakeLists.txt  main.c
examples/05_image-view/: CMakeLists.txt  COPYING  image.h  main.c  make-image.py
examples/06_window/: CMakeLists.txt  main.c
examples/07_blending/: CMakeLists.txt  main.c
examples/08_windowing/: CMakeLists.txt  decoration.c  decoration.h  main.c  title-bar.c  title-bar.h  window.c  window.h
examples/09_radius-view/: CMakeLists.txt  main.c
examples/10_filters-view/: CMakeLists.txt  main.c
examples/11_clip/: CMakeLists.txt  main.c
examples/12_parent/: CMakeLists.txt  main.c
examples/13_timer/: CMakeLists.txt  main.c
examples/14_scroll/: CMakeLists.txt  main.c
examples/15_app-registry/: CMakeLists.txt  main.c
examples/15_popup/: CMakeLists.txt  main.c
examples/16_glyphs/: CMakeLists.txt  main.c
examples/17_canvas/: CMakeLists.txt  main.c
examples/application/: CMakeLists.txt  main.c
examples/desktop-surface/: CMakeLists.txt  main.c
examples/event-listener/: CMakeLists.txt  main.c
examples/surface/: CMakeLists.txt  main.c
examples/views/: CMakeLists.txt  main.c
include/foundation/: application.h  bench.h  cursor.h  desktop-surface.h  egl-context.h  event-dispatcher.h  event.h  foundation.h  image.h  input.h  list.h  log.h  output.h  point.h  rect.h  size.h  surface.h  view.h
include/swingby/: application.h  bench.h  canvas.h  color.h  common.h  cursor.h  desktop-surface.h  egl-context.h  event-dispatcher.h  event.h  filter.h  font.h  glyph.h  image.h  input.h  list.h  log.h  output.h  paint.h  pixmap.h  point.h  rect.h  size.h  surface.h  swingby.h  view.h
include/wayland-protocols/stable/: README
shaders/: canvas.frag  canvas.vert  color.frag  rect.vert  sample.frag
src/: application.c  bench.c  color.c  common.c  cursor.c  desktop-surface.c  egl-context.c  event-dispatcher.c  event.c  filter.c  glyph.c  image.c  list.c  log.c  output.c  pixmap.c  point.c  rect.c  shaders.h  size.c  skia-draw.h  surface.c  view.c
src/backend/: gl.cpp  gl.h  raster.cpp
src/egl-context/: egl-context.c
src/helpers/: application.c  application.h  shared.c  shared.h  surface.h
src/impl/: glyph-impl.cpp  glyph-impl.h  glyph-impl.hpp  image-impl.cpp  image-impl.hpp
src/platform/cocoa/: application.mm  desktop-surface.mm  surface.mm
src/platform/wayland/: application.c  desktop-surface.c  surface.c
src/platform/wayland/egl-context/: egl-context.c  egl-context.h
src/platform/wayland/helpers/: surface.c
src/platform/wayland/xkb/: xkb-context.c
src/platform/win32/: application.c  desktop-surface.c  surface.c
src/platform/win32/d3d-context/: d3d-context.cpp  d3d-context.h
src/private/: output-priv.c  output-priv.h  pointer-priv.c  pointer-priv.h
src/skia/: canvas.cpp  context.cpp  context.h  draw.cpp  draw.h  font.cpp  gl-context.cpp  gl-context.h  gl-renderer.cpp  gl-renderer.h  image.cpp  image.h  load-image.cpp  load-image.h  raster-context.cpp  raster-context.h  raster-renderer.cpp  raster-renderer.h  renderer.cpp  renderer.h  sk-surface.cpp  sk-surface.h
src/skia/backend/: gl.cpp  gl.h  raster.cpp  raster.h
src/xcursor/: xcursor.c  xcursor.h
src/xkb/: xkb-context.h
tests/: CMakeLists.txt  list.c  rect.c
