add_subdirectory(00_application)
add_subdirectory(01_surface)
add_subdirectory(02_desktop-surface)
add_subdirectory(03_views)
add_subdirectory(04_event-listener)
add_subdirectory(05_image-view)
add_subdirectory(06_window)
add_subdirectory(07_blending)
add_subdirectory(08_windowing)
add_subdirectory(09_radius-view)
add_subdirectory(10_filters-view)
add_subdirectory(11_clip)
add_subdirectory(12_parent)
add_subdirectory(13_timer)
add_subdirectory(14_scroll)
add_subdirectory(15_popup)
add_subdirectory(16_glyphs)

add_custom_target(example)

add_dependencies(example
    example_application
    example_surface
    example_desktop-surface
    example_views
    example_event-listener
    example_image-view
    example_window
    example_blending
    example_windowing
    example_radius-view
    example_filters-view
    example_clip
    example_parent
    example_timer
    example_scroll
    example_popup
    example_glyphs
)
